--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             height: 100%;
             max-width: 1920px;
             max-height: 1080px;
-            position: relative;
+            position: fixed;
         }
         #menu-bar {
             position: absolute;
