--- a/index.html
+++ b/index.html
@@ -3,35 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottie Animation with Menu Bar</title>
+    <title>Lottie Scroll Animation</title>
     <style>
         body {
             margin: 0;
-            overflow: hidden;
+            overflow-x: hidden;
+        }
+        #container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #000;
+            overflow: hidden;
+            background: #000;
         }
-        #aspect-ratio-container {
+        #animation-wrapper {
             position: relative;
             width: 100%;
             height: 100%;
             max-width: 1920px;
             max-height: 1080px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-        }
-        #animation-container {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
         }
         #menu-bar {
             position: absolute;
@@ -54,18 +49,22 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
-            z-index: 1;
+        }
+        .scroll-space {
+            height: 300vh; /* Creates enough space for scrolling */
         }
     </style>
 </head>
 <body>
 
-<div id="aspect-ratio-container">
-    <div id="animation-container">
+<div id="container">
+    <div id="animation-wrapper">
         <div id="menu-bar">Menu Bar</div>
         <div id="lottie-container"></div>
     </div>
 </div>
+
+<div class="scroll-space"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
 <script>
@@ -75,19 +74,18 @@
     const lottieAnimation = lottie.loadAnimation({
         container: document.getElementById('lottie-container'),
         renderer: 'svg',
-        loop: true,
-        autoplay: true,
+        loop: false,
+        autoplay: false,
         path: 'data.json' // Path to your Lottie JSON file
     });
 
+    // Listener for when the Lottie animation DOM is loaded
     lottieAnimation.addEventListener('DOMLoaded', () => {
         console.log('Lottie animation DOM loaded.');
     });
 
-    lottieAnimation.addEventListener('data_ready', () => {
-        console.log('Lottie data is ready, animation frames loaded.');
-    });
-</script>
-
-</body>
-</html>
+    // Bind the animation playback to the scroll event
+    window.addEventListener('scroll', () => {
+        if (lottieAnimation.totalFrames > 0) {
+            const scrollTop = window.scrollY || window.pageYOffset;
+            const maxScrollTop = document.documentElement.scrollHeig
