--- a/index.html
+++ b/index.html
@@ -9,35 +9,31 @@
             margin: 0;
             overflow-x: hidden; /* Ensure only vertical scroll is considered */
             background-color: black; /* Set background color to black */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
-        #aspect-ratio-container {
-            position: relative;
+        #container {
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 100%;
-            max-width: 1920px;
-            max-height: 1080px;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             overflow: hidden;
         }
-        #animation-wrapper {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        #menu-bar {
+        #lottie-container {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
+            height: 100vh;
+            pointer-events: none;
+        }
+        #menu-bar {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
             height: 7vh; /* Fixed height for the menu bar */
             background-color: black; /* Black menu bar */
             display: flex;
@@ -45,6 +41,7 @@
             align-items: center;
             padding: 0 20px;
             z-index: 10;
+            transition: width 0.1s; /* Smooth adjustment */
         }
         #menu-left {
             display: flex;
@@ -65,18 +62,16 @@
 </head>
 <body>
 
-<div id="aspect-ratio-container">
-    <div id="animation-wrapper">
-        <div id="menu-bar">
-            <div id="menu-left">
-                <img src="1Butt.png" alt="Left Button" class="menu-button">
-            </div>
-            <div id="menu-right">
-                <img src="2Butt.png" alt="Right Button 1" class="menu-button">
-                <img src="3Butt.png" alt="Right Button 2" class="menu-button">
-            </div>
+<div id="container">
+    <div id="lottie-container"></div>
+    <div id="menu-bar">
+        <div id="menu-left">
+            <img src="1Butt.png" alt="Left Button" class="menu-button">
         </div>
-        <div id="lottie-container"></div>
+        <div id="menu-right">
+            <img src="2Butt.png" alt="Right Button 1" class="menu-button">
+            <img src="3Butt.png" alt="Right Button 2" class="menu-button">
+        </div>
     </div>
 </div>
 
@@ -98,6 +93,7 @@
     // Listener for when the Lottie animation DOM is loaded
     lottieAnimation.addEventListener('DOMLoaded', () => {
         console.log('Lottie animation DOM loaded.');
+        adjustMenuBarWidth(); // Adjust the menu bar width when the animation loads
     });
 
     // Bind the animation playback to the scroll event
@@ -115,6 +111,18 @@
             console.error('Animation frames are not available yet or set to zero.');
         }
     });
+
+    // Adjust the width of the menu bar to match the Lottie container
+    function adjustMenuBarWidth() {
+        const lottieContainer = document.getElementById('lottie-container');
+        const menuBar = document.getElementById('menu-bar');
+        const lottieRect = lottieContainer.getBoundingClientRect();
+        menuBar.style.width = `${lottieRect.width}px`;
+    }
+
+    // Call the function on resize and load to ensure it stays matched
+    window.addEventListener('resize', adjustMenuBarWidth);
+    window.addEventListener('load', adjustMenuBarWidth);
 </script>
 
 </body>
