--- a/index.html
+++ b/index.html
@@ -90,7 +90,35 @@
         path: 'data.json' // Path to your Lottie JSON file
     });
 
-    // Listener for when the Lottie animation DOM is loaded
+    // Adjust the width of the menu bar to match the Lottie animation
+    function adjustMenuBarWidth() {
+        const lottieElement = document.querySelector('#lottie-container svg');
+        const menuBar = document.getElementById('menu-bar');
+
+        if (lottieElement) {
+            const lottieWidth = lottieElement.getBoundingClientRect().width;
+            console.log(`Lottie Element Width: ${lottieWidth}`);
+            menuBar.style.width = `${lottieWidth}px`;
+        } else {
+            console.error('Lottie SVG element not found. Retrying...');
+            // Retry mechanism: attempt to find the element after a short delay
+            setTimeout(adjustMenuBarWidth, 100); // Retry after 100 milliseconds
+        }
+    }
+
+    // MutationObserver to detect when the Lottie SVG is added to the DOM
+    const observer = new MutationObserver((mutationsList) => {
+        for (const mutation of mutationsList) {
+            if (mutation.type === 'childList') {
+                adjustMenuBarWidth();
+            }
+        }
+    });
+
+    // Observe changes to the #lottie-container to detect when the SVG is added
+    observer.observe(document.getElementById('lottie-container'), { childList: true, subtree: true });
+
+    // Lottie animation event listeners
     lottieAnimation.addEventListener('DOMLoaded', () => {
         console.log('Lottie animation DOM loaded.');
         adjustMenuBarWidth(); // Adjust the menu bar width when the animation loads
@@ -111,25 +139,6 @@
             console.error('Animation frames are not available yet or set to zero.');
         }
     });
-
-    // Adjust the width of the menu bar to match the Lottie animation
- function adjustMenuBarWidth() {
-    const lottieElement = document.querySelector('#lottie-container svg');
-    const menuBar = document.getElementById('menu-bar');
-
-    if (lottieElement) {
-        const lottieWidth = lottieElement.getBoundingClientRect().width;
-        console.log(`Lottie Element Width: ${lottieWidth}`); // Debug log
-        menuBar.style.width = `${lottieWidth}px`;
-    } else {
-        console.error('Lottie SVG element not found.'); // Error log if element is not detected
-    }
-}
-
-
-    // Continuously monitor the size changes in the Lottie element
-    const resizeObserver = new ResizeObserver(adjustMenuBarWidth);
-    resizeObserver.observe(document.getElementById('lottie-container'));
 
     // Call the function on resize and load to ensure it stays matched
     window.addEventListener('resize', adjustMenuBarWidth);
