--- a/index.html
+++ b/index.html
@@ -97,9 +97,20 @@
 
         if (lottieElement) {
             const lottieWidth = lottieElement.getBoundingClientRect().width;
+            const computedStyle = window.getComputedStyle(lottieElement);
+            const transformScale = computedStyle.transform || '';
+
             console.log(`Lottie Element Width: ${lottieWidth}`);
-            console.log(`Adjusting Menu Bar Width to: ${lottieWidth}`);
-            menuBar.style.width = `${lottieWidth}px`;
+            console.log(`Computed Style Width: ${computedStyle.width}`);
+            console.log(`Transform Scale: ${transformScale}`);
+            
+            // Check if width seems incorrectly small, indicating a transformation issue
+            if (lottieWidth > 100) {
+                console.log(`Adjusting Menu Bar Width to: ${lottieWidth}`);
+                menuBar.style.width = `${lottieWidth}px`;
+            } else {
+                console.warn('Detected anomalously small width. Skipping adjustment to avoid errors.');
+            }
         } else {
             console.error('Lottie SVG element not found. Retrying...');
         }
@@ -141,7 +152,7 @@
         monitorAnimation();
     });
 
-    // Remove reliance on window resize events if causing conflicts
+    // Prevent external events like resize from disrupting the width adjustments
     window.removeEventListener('resize', adjustMenuBarWidth);
 
     // Bind the animation playback to the scroll event
